# finance-news-aggregator-rs

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.kiro/specs/integration-testing/: design.md  requirements.md  tasks.md
docs/: API_USAGE_GUIDE.md
examples/: all_sources_example.rs  config_example.rs  generic_feed_example.rs  topic_based_example.rs
src/: error.rs  lib.rs  news_client.rs  parser.rs  types.rs
src/news_source/: cnbc.rs  cnn_finance.rs  generic.rs  market_watch.rs  mod.rs  nasdaq.rs  seeking_alpha.rs  sp_global.rs  wsj.rs  yahoo_finance.rs
tests/: README.md  integration_test_suite.rs  test_cnbc_integration.rs  test_cnn_finance_integration.rs  test_market_watch_integration.rs  test_nasdaq_integration.rs  test_seeking_alpha_integration.rs  test_wsj_integration.rs  test_yahoo_finance_integration.rs
tests/integration/: cli_runner.rs  mod.rs  test_runner.rs
tests/integration/utils/: assertions.rs  client_factory.rs  deprecation_tracker.rs  environment.rs  mod.rs
